# proyecto

./: pyproject.toml
src/config/: settings.py
